@@ -1,6 +1,6 @@
 
-R version 3.2.3 (2015-12-10) -- "Wooden Christmas-Tree"
-Copyright (C) 2015 The R Foundation for Statistical Computing
+R version 3.3.1 (2016-06-21) -- "Bug in Your Hair"
+Copyright (C) 2016 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -31,6 +31,12 @@ Loading required package: variables
 > mod <- mlt(m, data = d)
 > 
 > p <- predict(mod, newdata = d)
+> 
+> K <- 15
+> q <- mkgrid(m, n = K)[["y"]]
+> p1 <- predict(mod, newdata = d[, c("x1", "x2")], q = q)
+> p2 <- predict(mod, newdata = d[, c("x1", "x2")], K = K)
+> stopifnot(all.equal(p1, p2))
 > 
 > (p0 <- predict(mod$model$model, 
 +     newdata = expand.grid(d), coef = coef(mod)))
@@ -3535,4 +3541,4 @@ Levels: 1 < 2 < 3
 > 
 > proc.time()
    user  system elapsed 
-  1.148   0.220   1.366 
+  1.100   0.224   1.321 
