@@ -2,10 +2,13 @@
 \name{NEWS}
 \title{NEWS file for the mlt package}
 
-\section{Changes in Version 0.0-34 (2016-08-30)}{
+\section{Changes in Version 0.0-34 (2016-09-09)}{
   \itemize{
     \item{fix bug when calling \code{survfit} for computing initial probabilities.}
     \item{add \code{bysim} argument to \code{simulate}.}
+    \item{make sure \code{checkGrad} is respected by \code{update}.}
+    \item{\code{predict} computes \code{q} with \code{K} elements 
+          if not given (as \code{plot} always did).}
  }
 }
 
